bppackaging/src/objects/Business_Profile__c.object
<CustomObject>
    <fields>
        <fullName>Business_City__c</fullName>
        <label>Business City</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Business Profiles</relationshipLabel>
        <relationshipName>Business_Profiles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Email__c</fullName>
        <label>Business Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Business_Name__c</fullName>
        <label>Business Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Phone__c</fullName>
        <label>Business Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Business_Postal_Code__c</fullName>
        <label>Business Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_State__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business State</label>
        <referenceTo>State__c</referenceTo>
        <relationshipLabel>Business Profiles</relationshipLabel>
        <relationshipName>Business_Profiles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Street_Address1__c</fullName>
        <label>Business Street Address1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Street_Address2__c</fullName>
        <label>Business Street Address2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Name_Optional__c</fullName>
        <label>Company Name Optional</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Migration_Id__c</fullName>
        <externalId>true</externalId>
        <label>Migration Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Same_As_Business_Address__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Same As Business Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Shipping_City__c</fullName>
        <label>Shipping City</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shipping Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Business Profiles (Shipping Country)</relationshipLabel>
        <relationshipName>Business_Profiles1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Shipping_Postal_Code__c</fullName>
        <label>Shipping Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_State__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shipping State</label>
        <referenceTo>State__c</referenceTo>
        <relationshipLabel>Business Profiles (Shipping State)</relationshipLabel>
        <relationshipName>Business_Profiles1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Shipping_Street_Address1__c</fullName>
        <label>Shipping Street Address1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Street_Address2__c</fullName>
        <label>Shipping Street Address2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Business Profile</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BPN-{000000}</displayFormat>
        <label>Business Profile Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Business Profiles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>